tests/fixtures/errors/e0103_unknown_variant.mimz
// expect: E0103
module M {
  clock c
  reset r
  out y: bit
  enum S { A, B }
  reg s: S = S.A
  y = s == S.Z
}
